<resources>
    <string name="app_name">Agora Web</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>

    <string name="title_activity_splash_screen">splashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nipun Agarwal</string>
    <string name="nav_header_subtitle">abc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="total">Total</string>
    <string name="total_number">5</string>
    <string name="pending">Pending</string>
    <string name="pending_number">1</string>
    <string name="Active">Active</string>
    <string name="Active_number">2</string>
    <string name="Completed">Completed</string>
    <string name="Completed_number">2</string>
    <string name="register">REGISTER</string>
    <string name="create_election">Create Election</string>
    <string name="agora_web">Agora Web</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account_login">Already Have an Account ? Login</string>
    <string name="profile">Profile</string>
    <string name="nipun_agarwal">Nipun Agarwal</string>
    <string name="your_elections">Your Elections</string>
    <string name="election_name">Election Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="description">Description</string>
    <string name="cast_vote">Cast Vote</string>
    <string name="election_candidates">Election Candidates</string>
    <string name="mr_abc">Mr Abc</string>
    <string name="you_can_only_vote_a_single_person_in_this_election">You can only vote a Single Person in this election</string>
    <string name="your_ballot">Your Ballot</string>
    <string name="create_account">Create Account</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="eligible_elections">Eligible Elections</string>
    <string name="election_name_1">Election Name 1</string>
    <string name="this_is_the_description_of_this_election_it_will_have_many_words">This is the description of this election. It will have many words</string>
    <string name="candidates">Candidates</string>
    <string name="algorithm_used_minimax_condorset">Algorithm Used:- Minimax Condorset</string>
    <string name="vote">Vote</string>
    <string name="elections">Elections</string>
    <string name="ongoing">Ongoing</string>
    <string name="election_Name">IOS v/s Android</string>
    <string name="election_description">Election to decide which one is better</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="algorithm">Algorithm</string>
    <string name="minimax_condorset">Minimax Condorset</string>
    <string name="edit">Edit</string>
    <string name="created_elections">Created Elections</string>
    <string name="_4_4">4/4</string>
    <string name="get_realtime_results">Get Realtime Results</string>
    <string name="inline_voters">Inline Voters</string>
    <string name="how_secret_are_these_ballots">How Secret are these ballots ?</string>
    <string name="_2_4">2/4</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="add">Add</string>
    <string name="selected_candidates">Selected Candidates</string>
    <string name="_1_4">1/4</string>
    <string name="end">End</string>
    <string name="results">Results</string>
    <string name="react_native">React Native</string>
    <string name="flutter">Flutter</string>
    <string name="password">password</string>
    <string name="mr_xyz">Mr Xyz</string>
    <string name="next">NEXT</string>
    <string name="select_voting_algorithm">select voting algorithm</string>
    <string name="_02_04_1999">02/04/1999</string>


</resources>
