<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".loginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="377dp"
        android:background="@drawable/gradienttheme"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/ralewaymedium"
                android:gravity="top"
                android:text="@string/login"
                android:textAppearance="@style/login" />

            <EditText
                android:id="@+id/usernameEdtTxt"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/rectangle_4"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/passwordEdtTxt"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/rectangle_4"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="16dp" />

            <Button
                android:id="@+id/goBtn"
                android:layout_width="148dp"
                android:layout_height="43dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_5"
                android:fontFamily="@font/ralewaymedium"
                android:text="Go"
                android:textColor="@android:color/white"
                android:textSize="24dp" />


        </LinearLayout>
    </FrameLayout>

        <ImageButton
            android:layout_width="298dp"
            android:layout_height="58dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/facebook"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:layout_width="294dp"
            android:layout_height="58dp"
            android:layout_marginTop="13dp"
            android:scaleType="fitCenter"
            android:src="@drawable/google"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/createAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="22dp"
            android:fontFamily="@font/ralewaybold"
            android:layout_marginTop="50dp"/>

        <View
            android:layout_width="167dp"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="14dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/ralewayregular" />

            <View
                android:layout_width="2dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="20dp"
                android:background="@drawable/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="14dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/ralewayregular" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>