<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradienttheme"
    tools:context=".activities.registerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_gravity="left"
                android:layout_weight="0.2"
                android:id="@+id/backBtn"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/backbtn" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/create_election"
                android:layout_weight="2.3"
                android:textAlignment="center"
                android:fontFamily="@font/ralewaybold"
                android:textSize="24dp"
                android:textColor="@android:color/white" />

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_1_4"
                android:textSize="18dp"
                android:layout_weight="1"
                android:fontFamily="@font/ralewayextrabold"
                android:textColor="@android:color/white"/>

        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="385dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="27dp"
                app:cardElevation="-1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="50dp"
                    android:gravity="center">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_height="40dp"
                        android:hint="@string/election_name"
                        android:textAlignment="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rectangle_4">

                    </EditText>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_height="80dp"
                        android:hint="Election Description"
                        android:padding="5dp"
                        android:singleLine="false"
                        android:textAlignment="center"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/rectangle_4">

                    </EditText>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:weightSum="1"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_weight="0.1"
                            android:background="@android:color/transparent"
                            android:src="@drawable/calender"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_weight="0.815"
                            android:layout_height="40dp"
                            android:hint="@string/start"
                            android:textAlignment="center"

                            android:background="@drawable/rectangle_4">

                        </EditText>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:weightSum="1"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_weight="0.1"
                            android:background="@android:color/transparent"
                            android:src="@drawable/calender"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_weight="0.815"
                            android:layout_height="40dp"
                            android:hint="@string/end"
                            android:textAlignment="center"

                            android:background="@drawable/rectangle_4">

                        </EditText>

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>



        </RelativeLayout>



        <android.support.v7.widget.CardView
            android:layout_width="324dp"
            app:cardCornerRadius="29dp"
            android:background="@android:color/transparent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="7dp"
            android:layout_height="51dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nextBtn"
                android:text="@string/next"
                android:elevation="1dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:fontFamily="@font/ralewaybold"
                android:background="@drawable/nextelectionbutton"/>

        </android.support.v7.widget.CardView>




    </LinearLayout>

</ScrollView>